5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1602_2895.log
== TEST (2019-03-20 19:00:29) 
-- CODE:
games=3
game1=20.0
game2=35.0
game3=40.0
frete=30.0
game1+game2+game3+frete
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:00:45) 
-- CODE:
games=3
game1=20.0
game2=35.0
game3=40.0
frete=30.0
print(game1+game2+game3+frete)
-- OUTPUT:
125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:00:55) 
-- CODE:
games=3
game1=20.0
game2=35.0
game3=40.0
frete=30.0
print(game1+game2+game3+frete)
-- EXECUTION TIME:
0.21138
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
125.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
125.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
125.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:09:11) 
-- CODE:
games=2
game=20.0
frete=30.0
game= float(input("preco total. ")
total= 2*20.0+30.0				
-- ERROR:
File "XXXX", line 5
    total= 2*20.0+30.0				
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:09:26) 
-- CODE:
games=2
game=20.0
frete=30.0
game= float(input("preco total. ")
total= 2*20+30				
-- ERROR:
File "XXXX", line 5
    total= 2*20+30				
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:05) 
-- CODE:
games=2
game=20.0
frete=30.0
game= float(input("preco total. ")
total= 2*20+30	
print(total)
-- ERROR:
File "XXXX", line 5
    total= 2*20+30	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:15:52) 
-- CODE:
games=2
game=20.0
frete=30.0
game= float(input("preco total. ")
total= games*game+frete
print(total)
-- ERROR:
File "XXXX", line 5
    total= games*game+frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:18:15) 
-- CODE:
games=2
game=20.0
frete=30.0
jogo= float(input("preco total. ")
total= games*game+frete
print(total)
-- ERROR:
File "XXXX", line 5
    total= games*game+frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:18:39) 
-- CODE:
games=2
game=20.0
frete=30.0
jogo= float(input("preco total. ")
total= 2*20.0+30.0
print(total)
-- ERROR:
File "XXXX", line 5
    total= 2*20.0+30.0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:19:07) 
-- CODE:
games=2
game=20.0
frete=30.0
jogo= float(input("preco total. ")
total= (2*20.0)+30.0
print(total)
-- ERROR:
File "XXXX", line 5
    total= (2*20.0)+30.0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:19:22) 
-- CODE:
games=2
game=20.0
frete=30.0
jogo= float(input("preco total. ")
total= (2*20)+30
print(total)
-- ERROR:
File "XXXX", line 5
    total= (2*20)+30
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:19:23) 
-- CODE:
games=2
game=20.0
frete=30.0
jogo= float(input("preco total. ")
total= (2*20)+30
print(total)
-- EXECUTION TIME:
0.138582
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 5
    total= (2*20)+30
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:04:22) 
-- CODE:
games=2
game=20.0
frete=30.0
jogo= float(input("preco total. ")
total= (2*20)+30
print(total)
-- ERROR:
File "XXXX", line 5
    total= (2*20)+30
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:04:33) 
-- CODE:
games=2
game=20.0
frete=30.0
jogo= float(input("preco total. ")
total= 2*20+30
print(total)
-- ERROR:
File "XXXX", line 5
    total= 2*20+30
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:05:01) 
-- CODE:
games=2
game=20.0
frete=30.0
jogo= float(input("preco total. ")
total= 20+20+30
print(total)
-- ERROR:
File "XXXX", line 5
    total= 20+20+30
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:09:34) 
-- CODE:
games=int(input("quatidade de games ? "))
game=float(input("preço do game ? " ))
frete=loat(input("valor do frete ?"))
total= games*game+frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete=loat(input())
NameError: name 'loat' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:10:02) 
-- CODE:
games=int(input("quatidade de games ? "))
game=float(input("preco do game ? " ))
frete=loat(input("valor do frete ?"))
total= games*game+frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete=loat(input())
NameError: name 'loat' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:10:37) 
-- CODE:
games = int(input("quatidade de games ? "))
game = float(input("preco do game ? " ))
frete = float(input("valor do frete ?"))
total = games*game+frete
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:10:45) 
-- CODE:
games = int(input("quatidade de games ? "))
game = float(input("preco do game ? " ))
frete = float(input("valor do frete ?"))
total = games*game+frete
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:11:01) 
-- CODE:
games = int(input("quatidade de games ? "))
game = float(input("preco do game ? " ))
frete = float(input("valor do frete ?"))
total = games*game+frete
print(total)
-- EXECUTION TIME:
0.129614
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:18:57) 
-- CODE:
games = int(input("quatidade de games ? "))
game = float(input("preco do game ? " ))
frete = float(input("valor do frete ?"))
total = games*game+frete
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
